Update custom settings.

--- a/Settings/WinAeroTweaker.ini
+++ b/Settings/WinAeroTweaker.ini
@@ -1,7 +1,7 @@
 ï»¿
 [Format]
 ProductName=Winaero Tweaker
-ProductVersion=0.8.0.0
+ProductVersion=0.10.1.0
 FormatVersion=1.0
 [User]
 pageDisableShortcutText=1
@@ -12,29 +12,64 @@ pageTaskbarThumbnails=1
 pageAdsUnwantedApps=1
 pageScrollBars=1
 pageTaskbarClockShowSeconds=1
-[pageCmdContextMenu]
-contextMenuTitle=Abrir ventana de comandos aquí
-Extended=0
+pageExplorerNewMenu=1
+pageContextMenuPSAsAdmin=1
+pageCustomAccents=1
+pageInactiveTitlebarColor=1
+pageAltTab10=1
+pageDisableWebSearch=1
+pageWallpaperQuality=1
+pageContextMenuSnippingTool=1
 [pageContextMenuCmdAsAdmin]
-contextMenuTitle=Símbolo del sistema (Administrador)
 Extended=1
 [pageTaskbarThumbnails]
 MinThumbSizePx=500
 NumThumbnails=10
 ExtendedUIHoverTime=250
-ThumbSpacingXPx=20
-ThumbSpacingYPx=20
-TopMarginPx=15
-BottomMarginPx=15
-LeftMarginPx=15
-RightMarginPx=15
+ThumbSpacingXPx=1
+ThumbSpacingYPx=1
+TopMarginPx=16
+BottomMarginPx=8
+LeftMarginPx=8
+RightMarginPx=8
 [pageAdsUnwantedApps]
 UnwantedAppsDisabled=1
 FileExplorerAdsDisabled=0
 LockScreenAdsDisabled=0
 StartSuggestionsDisabled=1
 TipsAboutWindowsDisabled=0
-WelcomePageDisabled=0
+WelcomePageDisabled=1
+SettingsAdsDisabled=1
+PeopleAdsDisabled=0
+TimelineSuggestionsDisabled=0
 [pageScrollBars]
 ScrollHeight=16
 ScrollWidth=16
+[pageExplorerNewMenu]
+.bat=1
+.cmd=1
+.reg=1
+.vbs=1
+.ps1=1
+[pageContextMenuPSAsAdmin]
+Extended=1
+[pageCmdContextMenu]
+Extended=0
+[pageCustomAccents]
+0Theme0=-13227264
+0Theme1=-12438009
+1Theme0=-9081256
+1Theme1=-8160411
+2Theme0=-6908797
+2Theme1=-6184557
+3Theme0=-2889747
+3Theme1=-1903107
+[pageInactiveTitlebarColor]
+AccentColorInactive=-12438009
+[pageAltTab10]
+Grid_backgroundPercent=0
+BackgroundDimmingLayer_percent=50
+Wallpaper=0
+AltTabSettings=0
+[pageWallpaperQuality]
+JPEGImportQuality=95
